2000-04-19  Larry Jones  <larry.jones@sdrc.com>

	* server.c (dirswitch): Set pending_error_text in addition to
	pending_error to aid in problem determination.

2000-03-23  Larry Jones  <larry.jones@sdrc.com>

	* mkmodules.c (mkmodules): Return without doing anything if noexec
	is set to avoid trashing existing files.

2000-03-23  Larry Jones  <larry.jones@sdrc.com>

	* main.c: Alphabetize cmds[] and cmd_usage[] and add server
	commands to cmd_usage[].

2000-03-21  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (client-1): May get "Broken pipe" message from the
	"server" in addition to the expected output.

2000-03-17  Larry Jones  <larry.jones@sdrc.com>

	* server.c (switch_to_user): Set CVS_Username if it hasn't already
	been set elsewhere.  (Patch submitted by Gordon Matzigkeit
	<gord@fig.org>).

2000-03-13  Larry Jones  <larry.jones@sdrc.com>

	* parseinfo.c: Add extern to logHistory declaration.  (Reported by
	<John.Tytgat@aaug.net>.)
	(parse_config): Reformat logHistory code.

2000-03-10  Larry Jones  <larry.jones@sdrc.com>

	* add.c (add): Don't try to set cvsroot_len until after checking
	for help only -- CVSroot_directory isn't set in that case.

2000-03-03  Larry Jones  <larry.jones@sdrc.com>

	* mkmodules.c (init): Use mkdir_if_needed to create CVSROOT/Emptydir
	so we don't fail if run multiple times.  (Reported by KOIE Hidetaka
	<hide@koie.org>.)
	* sanity.sh (1a): New test for above.

2000-03-02  Larry Jones  <larry.jones@sdrc.com>

	* main.c: Use identical #if's in the command table and the code
	for pserver and kserver to prevent "peculiar" configurations from
	having really perverse behavior because the command table entries
	are present but the related code isn't.

2000-03-01  Larry Jones  <larry.jones@sdrc.com>

	* import.c (import): Don't allow importing the repository.
	* sanity.sh (errmsg2-20, errmsg2-21): New tests for above.

2000-03-01  Larry Jones  <larry.jones@sdrc.com>

	* main.c (main): Update year in copyright message.
